@@ -5,11 +5,7 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - turn of strip of httpd in Apache's install.sh
 
-- <perl> sections and DirectoryIndex (Eric Cholet)
-
 - Perl{Set,Pass}Env tainted, should they not be? (Vivek)
-
-- dso + register_cleanup via startup pool
 
 - $r->finfo flaky? (Ken)
 
